feat: put `stations` inside UKE locations schema
